--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -10,7 +10,8 @@ if (GTest_FOUND)
             Symbolic/Constant.cpp
             Symbolic/Mul.cpp
             Symbolic/Operators.cpp
-            Symbolic/Variable.cpp)
+            Symbolic/Variable.cpp
+            Optimization/SimpleGradientDescent.cpp)
 
     include_directories(${CMAKE_SOURCE_DIR}/Source)
 
