Added numerical integration, clang format and lots of other features

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -6,13 +6,13 @@ if (GTest_FOUND)
     include_directories(${GTEST_INCLUDE_DIR})
 
     set(TEST_SOURCES
+            Integration/Euler.cpp
             ModelPredictiveController/MPC.cpp
             Symbolic/Add.cpp
             Symbolic/Constant.cpp
             Symbolic/Div.cpp
             Symbolic/Mul.cpp
             Symbolic/Operators.cpp
-            Symbolic/Util.cpp
             Symbolic/Variable.cpp
             Symbolic/Functions/Sin.cpp
             Symbolic/Functions/Cos.cpp
@@ -30,4 +30,4 @@ if (GTest_FOUND)
             NAME ${PROJECT_NAME}
             COMMAND ${PROJECT_NAME}
     )
-endif()
+endif ()
